[gd_scene load_steps=3 format=3 uid="uid://bl7ovft0dcrrw"]

[ext_resource type="Script" path="res://hud.gd" id="1_brd2m"]
[ext_resource type="PackedScene" uid="uid://d0dtk3et5b0u5" path="res://settings.tscn" id="2_i4188"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_brd2m")

[node name="Menu" type="Panel" parent="."]
offset_left = 291.0
offset_top = 183.0
offset_right = 842.0
offset_bottom = 506.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 0
offset_left = 52.0
offset_top = 36.0
offset_right = 486.0
offset_bottom = 284.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Settings_Button" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Settings"

[node name="HSeparator2" type="HSeparator" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Start_Button" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Start"

[node name="Settings" parent="." instance=ExtResource("2_i4188")]
visible = false
offset_left = 292.0
offset_top = 186.0
offset_right = 842.0
offset_bottom = 503.0

[connection signal="pressed" from="Menu/VBoxContainer/Settings_Button" to="." method="show_settings"]
[connection signal="pressed" from="Menu/VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="apply_button_pressed" from="Settings" to="." method="_on_settings_apply_button_pressed"]
